# QTfeedbackApp

./: .gitignore  CMakeLists.txt  FeedbackPage.qml  ImageButton.qml  LeaveCommentPage.qml  README.md  ServicePage.qml  ThanksPage.qml  appveyor.yml  contactlist.h  contactlist.ui  feedbackpage.cpp  feedbackpage.h  feedbackviewmodel.cpp  feedbackviewmodel.h  main.cpp  main.qml  mainviewmodel.cpp  mainviewmodel.h  qml.qrc
VirtualKeyboard/: VirtualKey.qml  VirtualKeyboard.qml  VirtualKeys.qml
i18n/: base.ts  qml_en.ts
shared/data/: configuration.xml  service.xml
src/: MainViewModel.cpp  MainViewModel.h  appUtils.cpp  appUtils.h  constants.h  pageViewModelBase.cpp  pageViewModelBase.h  pagemainViewModel.cpp  pagemainViewModel.h  pageserviceViewModel.cpp  pageserviceViewModel.h  serviceviewmodel.cpp  serviceviewmodel.h
src/interfaces/: iHandleNavigationViewModel.h  iNavigationService.h
src/messages/: navigateMessage.cpp  navigateMessage.h
src/models/: feedbackModel.cpp  feedbackModel.h
src/services/: appService.cpp  appService.h  logService.h  navigationService.cpp  navigationService.h  xmlService.cpp  xmlService.h
